--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
 .my_container {
 	margin-top: 70px;
 }
+.icon {
+  position: relative;
+  top: 1px;
+  display: inline-block;
+  height: 30px;
+  width: 30px;
+}
+.icon img {
+  width: 100%;
+  height: 100%;
+}
+.my_button {
+  width: 100%;
+  margin: 5px;
+}
