--- a/style.css
+++ b/style.css
@@ -1,39 +1,86 @@
-.my_container {
-	/*margin-top: 70px;*/
+body {
+  font-family:
+    'HelveticaNeue-Light',
+    'Helvetica Neue Light',
+    'Helvetica Neue',
+    Helvetica,
+    Arial;
+  color: #332b22;
 }
-.icon {
-  position: relative;
-  top: 1px;
-  display: inline-block;
-  height: 30px;
-  width: 30px;
+.navbar {
+  background-color: #332b22;
+  color: #9acee5;
 }
-.icon img {
+.navbar, .navbar-brand {
+  font-size: 24px;
+}
+#main {
+  background-color: #d6ebf1;
+  margin-top: 50px;
+  padding: 48px 0px 64px;
+  text-align: center;
+  font-size: 48px;
+}
+#skills {
+  background-color: #9acee5;
+  padding: 12px 0px 16px;
+}
+#skills .row {
+  margin: 0px 8px;
+}
+#skills .col-md-2 {
+  color: #06538e;
+  font-size: 28px;
+  text-align: center;
+  padding: 12px;
+}
+#portfolio .row {
+  margin: 48px 0px 72px;
+}
+#portfolio img {
+  box-shadow: 4px 4px 16px #808080;
+}
+#resume {
+  background-color: #d6ebf1;
+  padding: 24px 0px 36px;
+  text-align: center;
+}
+#resume .row {
+  margin: 0px 12px;
+}
+#resume a.btn {
   width: 100%;
-  height: 100%;
+  margin: 12px 0px 16px;
+  font-size: 24px;
 }
-.my_button {
+#resume p {
+  font-size: 21px;
+  text-align: left;
+}
+#resume .summary {
+  margin-bottom: 24px;
+}
+#resume img {
+  margin-bottom: 36px;
   width: 100%;
-  margin: 5px;
+  max-width: 180px;
 }
-.img_bg img {
-  width: 100%;
+footer {
+  background-color: #9acee5;
+  padding: 12px 0px 16px;
+  font-size: 16px;
+  text-align: center;
 }
-.title {
-  margin-left: 15px;
-}
-#page1, #page2, #page3, #page4, #page5 {
+/*
 
-  padding-top: 70px;
-}
-h4 {
-  text-align: center;
-}
-p {
-  font-size: 18px;
-  font-family: "Roboto Slab", "Helvetica Neue", Courier;
-  text-align: center;
-}
-h1,h2,h3,h4 {
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, sans-serif;
-}
+#332b22 24.5 % Black Magic (Brown)
+#b2a390 22.3 % Eagle (Green)
+#7f8384 11.4 % Grey (Grey)
+#d6ebf1 9.7 % Pattens Blue (Blue)
+#9acee5 9.0 % Cornflower (Blue)
+#836833 8.3 % McKenzie (Brown)
+#4e97c7 6.2 % Picton Blue (Blue)
+#594a29 4.5 % Bronze Olive (Brown)
+#06538e 2.2 % Dark Cerulean (Blue)
+#a48230 1.8 % Reef Gold (Green)
+*/
