--- a/style.css
+++ b/style.css
@@ -48,10 +48,14 @@ body {
 #resume .row {
   margin: 0px 12px;
 }
-#resume a.btn {
+#resume .btn {
   width: 100%;
   margin: 12px 0px 16px;
   font-size: 24px;
+}
+#resume .btn a {
+  text-decoration: none;
+  color: white;
 }
 #resume p {
   font-size: 21px;
